--- a/llm_integration.ipynb
+++ b/llm_integration.ipynb
@@ -1,125 +1,70 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "81e765bd",
+   "metadata": {},
+   "source": [
+    "# LLM Integration"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9a70b3fc",
+   "execution_count": 1,
+   "id": "e80d7898",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: google-generativeai in c:\\users\\user\\anaconda3\\lib\\site-packages (0.8.5)\n",
+      "Requirement already satisfied: google-ai-generativelanguage==0.6.15 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-generativeai) (0.6.15)\n",
+      "Requirement already satisfied: google-api-core in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-generativeai) (2.25.1)\n",
+      "Requirement already satisfied: google-api-python-client in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-generativeai) (2.173.0)\n",
+      "Requirement already satisfied: google-auth>=2.15.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-generativeai) (2.40.3)\n",
+      "Requirement already satisfied: protobuf in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-generativeai) (5.29.5)\n",
+      "Requirement already satisfied: pydantic in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-generativeai) (2.8.2)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-generativeai) (4.66.5)\n",
+      "Requirement already satisfied: typing-extensions in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-generativeai) (4.14.1)\n",
+      "Requirement already satisfied: proto-plus<2.0.0dev,>=1.22.3 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-ai-generativelanguage==0.6.15->google-generativeai) (1.26.1)\n",
+      "Requirement already satisfied: googleapis-common-protos<2.0.0,>=1.56.2 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-api-core->google-generativeai) (1.70.0)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.18.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-api-core->google-generativeai) (2.32.3)\n",
+      "Requirement already satisfied: cachetools<6.0,>=2.0.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-auth>=2.15.0->google-generativeai) (5.3.3)\n",
+      "Requirement already satisfied: pyasn1-modules>=0.2.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-auth>=2.15.0->google-generativeai) (0.2.8)\n",
+      "Requirement already satisfied: rsa<5,>=3.1.4 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-auth>=2.15.0->google-generativeai) (4.9.1)\n",
+      "Requirement already satisfied: httplib2<1.0.0,>=0.19.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-api-python-client->google-generativeai) (0.22.0)\n",
+      "Requirement already satisfied: google-auth-httplib2<1.0.0,>=0.2.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-api-python-client->google-generativeai) (0.2.0)\n",
+      "Requirement already satisfied: uritemplate<5,>=3.0.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-api-python-client->google-generativeai) (4.2.0)\n",
+      "Requirement already satisfied: annotated-types>=0.4.0 in c:\\users\\user\\anaconda3\\lib\\site-packages (from pydantic->google-generativeai) (0.6.0)\n",
+      "Requirement already satisfied: pydantic-core==2.20.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from pydantic->google-generativeai) (2.20.1)\n",
+      "Requirement already satisfied: colorama in c:\\users\\user\\appdata\\roaming\\python\\python312\\site-packages (from tqdm->google-generativeai) (0.4.6)\n",
+      "Requirement already satisfied: grpcio<2.0.0,>=1.33.2 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.15->google-generativeai) (1.72.0)\n",
+      "Requirement already satisfied: grpcio-status<2.0.0,>=1.33.2 in c:\\users\\user\\anaconda3\\lib\\site-packages (from google-api-core[grpc]!=2.0.*,!=2.1.*,!=2.10.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,<3.0.0dev,>=1.34.1->google-ai-generativelanguage==0.6.15->google-generativeai) (1.71.0)\n",
+      "Requirement already satisfied: pyparsing!=3.0.0,!=3.0.1,!=3.0.2,!=3.0.3,<4,>=2.4.2 in c:\\users\\user\\anaconda3\\lib\\site-packages (from httplib2<1.0.0,>=0.19.0->google-api-python-client->google-generativeai) (3.1.2)\n",
+      "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in c:\\users\\user\\anaconda3\\lib\\site-packages (from pyasn1-modules>=0.2.1->google-auth>=2.15.0->google-generativeai) (0.4.8)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\user\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.18.0->google-api-core->google-generativeai) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\user\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.18.0->google-api-core->google-generativeai) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\user\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.18.0->google-api-core->google-generativeai) (2.5.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\user\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.18.0->google-api-core->google-generativeai) (2025.7.14)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install google-generativeai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5c7690d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "import sqlite3\n",
-    "import json\n",
-    "import time\n",
+    "import google.generativeai as genai\n",
     "import config\n",
     "\n",
-    "API_KEY = config.API_KEY\n",
-    "GEMINI_URL = f\"https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key={API_KEY}\"\n",
-    "\n",
-    "def initialize_database():\n",
-    "    conn = sqlite3.connect('questions.db')\n",
-    "    cursor = conn.cursor()\n",
-    "    cursor.execute('''\n",
-    "        CREATE TABLE IF NOT EXISTS questions (\n",
-    "            id INTEGER PRIMARY KEY,\n",
-    "            key TEXT UNIQUE,\n",
-    "            value TEXT\n",
-    "        )\n",
-    "    ''')\n",
-    "    conn.commit()\n",
-    "    conn.close()\n",
-    "\n",
-    "def key_exists(cursor, key):\n",
-    "    cursor.execute(\"SELECT COUNT(*) FROM questions WHERE key = ?\", (key,))\n",
-    "    return cursor.fetchone()[0] > 0\n",
-    "\n",
-    "def create_prompt(difficulty, theme, specification):\n",
-    "    prompt = (\n",
-    "        f\"Create an IELTS standard listening module test with full comprehensions, questions, and answers.\\n\"\n",
-    "        f\"The difficulty should be {difficulty}.\\n\"\n",
-    "        f\"Each question should be on a different line, and each should have 4 possible answers.\\n\"\n",
-    "        f\"After all questions, provide the comprehension text and answers at the end.\\n\"\n",
-    "        f\"The theme is '{theme}' with the following specification: {specification}.\"\n",
-    "    )\n",
-    "    return prompt\n",
-    "\n",
-    "def generate_question(difficulty, theme, specification):\n",
-    "    initialize_database()\n",
-    "    conn = sqlite3.connect('questions.db')\n",
-    "    cursor = conn.cursor()\n",
-    "    \n",
-    "    prompt = create_prompt(difficulty, theme, specification)\n",
-    "\n",
-    "    headers = {\n",
-    "        \"Content-Type\": \"application/json\"\n",
-    "    }\n",
-    "\n",
-    "    payload = {\n",
-    "        \"contents\": [\n",
-    "            {\n",
-    "                \"parts\": [\n",
-    "                    {\"text\": prompt}\n",
-    "                ]\n",
-    "            }\n",
-    "        ]\n",
-    "    }\n",
-    "\n",
-    "    max_retries = 3\n",
-    "    for attempt in range(max_retries):\n",
-    "        response = requests.post(GEMINI_URL, headers=headers, data=json.dumps(payload))\n",
-    "\n",
-    "        if response.status_code == 200:\n",
-    "            try:\n",
-    "                data = response.json()\n",
-    "                questions = data[\"candidates\"][0][\"content\"][\"parts\"][0][\"text\"]\n",
-    "                break\n",
-    "            except (KeyError, IndexError):\n",
-    "                raise Exception(\"Unexpected Gemini response format\")\n",
-    "        elif response.status_code == 503:\n",
-    "            print(f\"Gemini is overloaded (Attempt {attempt + 1}). Retrying...\")\n",
-    "            time.sleep(2 ** attempt)\n",
-    "        else:\n",
-    "            raise Exception(f\"Gemini API error: {response.status_code} - {response.text}\")\n",
-    "    else:\n",
-    "        raise Exception(\"Gemini API failed after multiple retries.\")\n",
-    "\n",
-    "    base_key = ''.join(theme.strip().split()[:2]).lower()\n",
-    "    key = base_key\n",
-    "    index = 1\n",
-    "    while key_exists(cursor, key):\n",
-    "        key = f\"{base_key}{index}\"\n",
-    "        index += 1\n",
-    "\n",
-    "    cursor.execute(\"INSERT INTO questions (key, value) VALUES (?, ?)\", (key, questions))\n",
-    "    conn.commit()\n",
-    "    conn.close()\n",
-    "\n",
-    "    return questions\n",
-    "\n",
-    "def print_all_questions():\n",
-    "    initialize_database()\n",
-    "    conn = sqlite3.connect('questions.db')\n",
-    "    cursor = conn.cursor()\n",
-    "    cursor.execute(\"SELECT key, value FROM questions\")\n",
-    "    rows = cursor.fetchall()\n",
-    "    conn.close()\n",
-    "    return rows\n",
-    "\n",
-    "difficulty = \"moderate\"\n",
-    "theme = \"Technology and Innovation\"\n",
-    "specification = \"Focus on the impact of AI in daily life\"\n",
-    "\n",
-    "try:\n",
-    "    generated_questions = generate_question(difficulty, theme, specification)\n",
-    "    print(\"Generated Questions:\\n\")\n",
-    "    print(generated_questions) \n",
-    "except Exception as e:\n",
-    "    print(f\"Error: {e}\")\n",
-    "\n",
-    "print(\"\\nAll Stored Questions in Database:\\n\")\n",
-    "all_questions = print_all_questions()\n",
-    "for key, value in all_questions:\n",
-    "    print(f\"Key: {key}\\nQuestion Set:\\n{value}\\n{'-'*50}\")\n"
+    "genai.configure(api_key=\"AIzaSyCSC0LPUznCj0USGxAVXjXT_4vgVqp-ah4\")"
    ]
   }
  ],
@@ -130,7 +75,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.7"
   }
  },
