Done data preparation

--- a/question_generator.ipynb
+++ b/question_generator.ipynb
@@ -5,7 +5,7 @@
    "id": "a6e60a27",
    "metadata": {},
    "source": [
-    "# MCQ - Part 2"
+    "## Question Type Determine"
    ]
   },
   {
@@ -14,7 +14,13 @@
    "id": "c757ce65",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import json\n",
+    "import re\n",
+    "import google.generativeai as genai\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
