--- a/question_generator.ipynb
+++ b/question_generator.ipynb
@@ -1,37 +1,221 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9d0d7301",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\User\\anaconda3\\envs\\environment\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import necessary libraries\n",
+    "import pandas as pd\n",
+    "import random\n",
+    "import google.generativeai as genai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0d972cf8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize genai\n",
+    "genai.configure(api_key=\"AIzaSyBS-2pbdjYouOkcqHaX4ZI5HHPpSSmq3iw\")\n",
+    "model = genai.GenerativeModel(\"gemini-2.5-flash\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "a6e60a27",
+   "id": "df719edc",
    "metadata": {},
    "source": [
-    "## Question Type Determine"
+    "### Random Choose Question Type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "49535b6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Section 1': ['Plan Labelling', 'Table Completion'], 'Section 2': ['Matching', 'Map Labelling'], 'Section 3': ['Multiple Choice', 'Flow Chart Completion'], 'Section 4': ['Note Completion', 'Sentence Completion']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "question_types_df = pd.read_csv('data/questionType.csv')\n",
+    "assignments = {}\n",
+    "\n",
+    "for section in sorted(question_types_df['part'].unique()):\n",
+    "    section_types = question_types_df[question_types_df['part'] == section]['type'].tolist()\n",
+    "    k = random.choice([1, 2])\n",
+    "    selected = random.sample(section_types, k=min(k, len(section_types)))\n",
+    "    \n",
+    "    assignments[f\"Section {section}\"] = selected\n",
+    "\n",
+    "print(assignments)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97146e28",
+   "metadata": {},
+   "source": [
+    "### Question Generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1c3e12d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROMPT_TEMPLATE = \"\"\"\n",
+    "You are an expert IELTS Listening question generator.\n",
+    "Generate a realistic IELTS Listening question according to the following details:\n",
+    "\n",
+    "Question Type: {typeID} - {type_name}\n",
+    "Theme: {theme}\n",
+    "Specific Topic: {specific_topic}\n",
+    "Specifications: {specifications}\n",
+    "Instructions: {instruction}\n",
+    "Answer Format: {answer_format}\n",
+    "Key Skills: {key_skills}\n",
+    "Average Duration: {avg_duration}\n",
+    "Average Script Length: {avg_script_length}\n",
+    "Key Features: {key_features}\n",
+    "Audio Speed: {audio_speed}\n",
+    "\n",
+    "Requirements:\n",
+    "1. Generate questions, answers, and the audio transcript.\n",
+    "2. If the question type requires a diagram (Map, Plan, Flow Chart), generate a simple diagram (as text description or URL placeholder).\n",
+    "3. Return the output in JSON format:\n",
+    "\n",
+    "{{\n",
+    "  \"Questions\": [...],\n",
+    "  \"Answers\": [...],\n",
+    "  \"Transcript\": \"...\",\n",
+    "  \"Diagram\": \"...\"  # empty string if not required\n",
+    "}}\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1e87a26a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Section 1 Questions:\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "GenerativeModel.generate_content() got an unexpected keyword argument 'prompt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 34\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m q_type \u001b[38;5;129;01min\u001b[39;00m types:\n\u001b[0;32m     33\u001b[0m     type_info \u001b[38;5;241m=\u001b[39m question_types_df[question_types_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtype\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m q_type]\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m---> 34\u001b[0m     question_data \u001b[38;5;241m=\u001b[39m \u001b[43mgenerate_question\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     35\u001b[0m \u001b[43m        \u001b[49m\u001b[43mtypeID\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtype_info\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtype\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     36\u001b[0m \u001b[43m        \u001b[49m\u001b[43mtype_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtype_info\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtype\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     37\u001b[0m \u001b[43m        \u001b[49m\u001b[43minstruction\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtype_info\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43minstruction\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     38\u001b[0m \u001b[43m        \u001b[49m\u001b[43manswer_format\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtype_info\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43manswer_format\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     39\u001b[0m \u001b[43m        \u001b[49m\u001b[43mkey_skills\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtype_info\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mkey_skills\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     40\u001b[0m \u001b[43m        \u001b[49m\u001b[43mavg_duration\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtype_info\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mavg_duration\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     41\u001b[0m \u001b[43m        \u001b[49m\u001b[43mavg_script_length\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtype_info\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mavg_script_length\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     42\u001b[0m \u001b[43m        \u001b[49m\u001b[43mkey_features\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtype_info\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mkey_features\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     43\u001b[0m \u001b[43m        \u001b[49m\u001b[43maudio_speed\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtype_info\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43maudio_speed\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m     44\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     45\u001b[0m     \u001b[38;5;28mprint\u001b[39m(question_data)\n",
+      "Cell \u001b[1;32mIn[14], line 22\u001b[0m, in \u001b[0;36mgenerate_question\u001b[1;34m(typeID, type_name, instruction, answer_format, key_skills, avg_duration, avg_script_length, key_features, audio_speed)\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mgenerate_question\u001b[39m(typeID, type_name, instruction, answer_format, key_skills, avg_duration, avg_script_length, key_features, audio_speed):\n\u001b[0;32m      7\u001b[0m     prompt \u001b[38;5;241m=\u001b[39m PROMPT_TEMPLATE\u001b[38;5;241m.\u001b[39mformat(\n\u001b[0;32m      8\u001b[0m         typeID\u001b[38;5;241m=\u001b[39mtypeID,\n\u001b[0;32m      9\u001b[0m         type_name\u001b[38;5;241m=\u001b[39mtype_name,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     19\u001b[0m         audio_speed\u001b[38;5;241m=\u001b[39maudio_speed\n\u001b[0;32m     20\u001b[0m     )\n\u001b[1;32m---> 22\u001b[0m     response \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgenerate_content\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m     23\u001b[0m \u001b[43m        \u001b[49m\u001b[43mprompt\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mprompt\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     24\u001b[0m \u001b[43m        \u001b[49m\u001b[43mmax_output_tokens\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1500\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     25\u001b[0m \u001b[43m        \u001b[49m\u001b[43mtemperature\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.7\u001b[39;49m\n\u001b[0;32m     26\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     28\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\u001b[38;5;241m.\u001b[39mtext\n",
+      "\u001b[1;31mTypeError\u001b[0m: GenerativeModel.generate_content() got an unexpected keyword argument 'prompt'"
+     ]
+    }
+   ],
+   "source": [
+    "# Testing purpose\n",
+    "theme = \"Education\"\n",
+    "specific_topic = \"University Campus Tour\"\n",
+    "specifications = \"A conversation between a student and a campus guide.\"\n",
+    "\n",
+    "def generate_question(typeID, type_name, instruction, answer_format, key_skills, avg_duration, avg_script_length, key_features, audio_speed):\n",
+    "    prompt = PROMPT_TEMPLATE.format(\n",
+    "        typeID=typeID,\n",
+    "        type_name=type_name,\n",
+    "        theme=theme,\n",
+    "        specific_topic=specific_topic,\n",
+    "        specifications=specifications,\n",
+    "        instruction=instruction,\n",
+    "        answer_format=answer_format,\n",
+    "        key_skills=key_skills,\n",
+    "        avg_duration=avg_duration,\n",
+    "        avg_script_length=avg_script_length,\n",
+    "        key_features=key_features,\n",
+    "        audio_speed=audio_speed\n",
+    "    )\n",
+    "    \n",
+    "    response = model.generate_content(\n",
+    "        prompt=prompt,\n",
+    "        max_output_tokens=1500,\n",
+    "        temperature=0.7\n",
+    "    )\n",
+    "    \n",
+    "    return response.text\n",
+    "\n",
+    "for section, types in assignments.items():\n",
+    "    print(f\"\\n{section} Questions:\")\n",
+    "    for q_type in types:\n",
+    "        type_info = question_types_df[question_types_df['type'] == q_type].iloc[0]\n",
+    "        question_data = generate_question(\n",
+    "            typeID=type_info['type'],\n",
+    "            type_name=type_info['type'],\n",
+    "            instruction=type_info['instruction'],\n",
+    "            answer_format=type_info['answer_format'],\n",
+    "            key_skills=type_info['key_skills'],\n",
+    "            avg_duration=type_info['avg_duration'],\n",
+    "            avg_script_length=type_info['avg_script_length'],\n",
+    "            key_features=type_info['key_features'],\n",
+    "            audio_speed=type_info['audio_speed']\n",
+    "        )\n",
+    "        print(question_data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c757ce65",
+   "id": "0476059b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import os\n",
-    "import json\n",
-    "import re\n",
-    "import google.generativeai as genai\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "environment",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
