Clean File Structure

--- a/database.ipynb
+++ b/database.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2f602948",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "5b0270b0",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
    ],
    "source": [
     "# Read csv file\n",
-    "questionType_df = pd.read_csv(\"processed_data/questionType.csv\")\n",
+    "questionType_df = pd.read_csv(\"model_training/processed_data/questionType.csv\")\n",
     "\n",
     "print(f\"Example: \\n{questionType_df.head()}\\n\\n\")\n",
     "print(f\"Data Types: \\n{questionType_df.dtypes}\\n\\n\")\n",
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1f980336",
    "metadata": {},
    "outputs": [
@@ -748,11 +748,11 @@
     }
    ],
    "source": [
-    "output_csv = \"processed_data/training_set.csv\"\n",
+    "output_csv = \"model_training/processed_data/training_set.csv\"\n",
     "training_set_df = pd.DataFrame(columns=[\"questionID\", \"question\", \"answer\", \"transcript\", \"typeID\"])\n",
     "\n",
-    "pdf_folder = \"data/training_set\"\n",
-    "pdf_files = [f\"data/training_set/sample_{i}.pdf\" for i in range(1, 10)]\n",
+    "pdf_folder = \"model_training/data/training_set\"\n",
+    "pdf_files = [f\"model_training/data/training_set/sample_{i}.pdf\" for i in range(1, 10)]\n",
     "\n",
     "next_id = 1\n",
     "for pdf_path in pdf_files:\n",
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "c57580e7",
    "metadata": {},
    "outputs": [
@@ -1027,7 +1027,7 @@
    ],
    "source": [
     "# Read csv file\n",
-    "training_set_df = pd.read_csv(\"processed_data/training_set.csv\")\n",
+    "training_set_df = pd.read_csv(\"model_training/processed_data/training_set.csv\")\n",
     "\n",
     "trainign_collection_ref = db.collection(\"TrainingSet\")\n",
     "for _, row in training_set_df.iterrows():\n",
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "6f1b5941",
    "metadata": {},
    "outputs": [
@@ -1170,18 +1170,18 @@
     }
    ],
    "source": [
-    "df_vocab = load_all_vocab_pdfs(\"data/words_validation\")\n",
+    "df_vocab = load_all_vocab_pdfs(\"model_training/data/words_validation\")\n",
     "df_vocab.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "869da053",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_vocab.to_csv(\"processed_data/ielts_vocab.csv\", index=False)"
+    "df_vocab.to_csv(\"model_training/processed_data/ielts_vocab.csv\", index=False)"
    ]
   },
   {
