--- a/question_generator.ipynb
+++ b/question_generator.ipynb
@@ -43,16 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "9b16762c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initializer\n",
-    "QUESTION_TYPE_CSV = \"processed_data/questionType.csv\"\n",
-    "TRAINING_CSV = \"processed_data/training_set.csv\"\n",
-    "GENERATED_CSV = \"processed_data/generated_question.csv\"\n",
-    "WORD_CSV = \"processed_data/ielts_vocab.csv\"\n",
+    "QUESTION_TYPE_CSV = \"model_training/processed_data/questionType.csv\"\n",
+    "TRAINING_CSV = \"model_training/processed_data/training_set.csv\"\n",
+    "GENERATED_CSV = \"model_training/processed_data/generated_question.csv\"\n",
+    "WORD_CSV = \"model_training/processed_data/ielts_vocab.csv\"\n",
     "\n",
     "MAX_ATTEMPT = 5\n",
     "REWARD_GOAL = 4\n",
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "967f768d",
    "metadata": {},
    "outputs": [
@@ -620,7 +620,7 @@
    "source": [
     "# Save to Flie\n",
     "def save_csv(df):\n",
-    "    os.makedirs(\"processed_data\", exist_ok=True)\n",
+    "    os.makedirs(\"model_training/processed_data\", exist_ok=True)\n",
     "    if os.path.exists(GENERATED_CSV):\n",
     "        df.to_csv(GENERATED_CSV, mode='a', header=False, index=False)\n",
     "    else:\n",
