--- a/model_training/automated_marking.ipynb
+++ b/model_training/automated_marking.ipynb
@@ -80,7 +80,7 @@
     "\n",
     "# Initialize the model with JSON output configuration\n",
     "model = genai.GenerativeModel(\n",
-    "    model_name='gemini-2.5-flash', # Recommended for high-volume marking\n",
+    "    model_name='gemini-2.5-flash',\n",
     "    generation_config={\"response_mime_type\": \"application/json\"}\n",
     ")\n",
     "\n",
@@ -90,7 +90,6 @@
     "# --- Helper Functions ---\n",
     "\n",
     "def get_ielts_grade(mark_str):\n",
-    "    \"\"\"Converts a mark like '23/40' into an approximate IELTS Band Score.\"\"\"\n",
     "    try:\n",
     "        score = int(mark_str.split('/')[0])\n",
     "        if score >= 39: return \"9.0\"\n",
@@ -204,7 +203,6 @@
     "student_uploads = [\n",
     "    \"marking_data/set1_1.pdf\",\n",
     "    \"marking_data/set1_2.jpg\"\n",
-    "    # ... add up to 10 more here\n",
     "]\n",
     "\n",
     "# 1. Extract official key\n",
